css/index.css
html,
body {
  font-family: 'Roboto', sans-serif;
}
h1,
h2,
h3,
h4,
h5 {
  font-family: 'Indie Flower', cursive;
}
.container-fluid {
  background-color: white;
  border-bottom: 2px dashed silver;
}
.logo-heading {
  padding: 20px 0 10px;
}
.nav a {
  color: black;
}
.container {
  max-width: 800px;
}
.footer {
  color: black;
  background: blanchedalmond;
  padding: 20px 0;
}
.collapse {
  visibility: hidden;
}
.collapse.show {
  visibility: visible;
  display: block;
}
.collapsing {
  position: relative;
  height: 0;
  overflow: hidden;
  -webkit-transition-property: height, visibility;
  transition-property: height, visibility;
  -webkit-transition-duration: 0.35s;
  transition-duration: 0.35s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}
.collapsing.width {
  -webkit-transition-property: width, visibility;
  transition-property: width, visibility;
  width: 0;
  height: auto;
}

